Adding Test Case and method to allow any two words.
Implemented UnitTest to confirm that a value of 15 is FizzBuzz and also implmented a method that allows the users to put in their own words.  Lastly, first pass at getting list back while processing

--- a/NumberWordSwapTestConsole/NumberWordSwapTestConsole.csproj
+++ b/NumberWordSwapTestConsole/NumberWordSwapTestConsole.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NumberWordSwap\NumberWordSwap.csproj" />
+    <ProjectReference Include="..\NUnitTestForNumberWordSwap\NUnitTestForNumberWordSwap.csproj" />
   </ItemGroup>
 
 </Project>
